asupersync-macros/tests/compile_fail/spawn_string_as_future.rs
use asupersync_macros::spawn;

fn main() {
    let _ = spawn!("worker", "not a future");
}
